# renovate-maven-bzlmod

./: .bazelrc  BUILD  Dummy.txt  MODULE.bazel  README.md  WORKSPACE  java_ext.bzl  maven_install.json  maven_install_os.json  renovate.json  shade_lucene
genrules/: BUILD
reference/: Reference.java  ReferenceTest.java
